updated notebook and prediction figure

--- a/Notebooks/PredictO3.ipynb
+++ b/Notebooks/PredictO3.ipynb
@@ -253,7 +253,7 @@
     {
      "data": {
       "text/plain": [
-       "<fbprophet.forecaster.Prophet at 0x7fa93eb7f290>"
+       "<fbprophet.forecaster.Prophet at 0x7f35906735d0>"
       ]
      },
      "execution_count": 6,
@@ -273,7 +273,7 @@
    "outputs": [],
    "source": [
     "#construct future dataframe\n",
-    "n_future_months = 8\n",
+    "n_future_months = 15\n",
     "begin_ds = df_O3['ds'].max()\n",
     "month = begin_ds.month\n",
     "year = begin_ds.year\n",
@@ -338,51 +338,51 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-04-01</td>\n",
-       "      <td>0.079037</td>\n",
-       "      <td>0.071216</td>\n",
-       "      <td>0.087084</td>\n",
+       "      <th>10</th>\n",
+       "      <td>2020-11-01</td>\n",
+       "      <td>0.065745</td>\n",
+       "      <td>0.058062</td>\n",
+       "      <td>0.073464</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-05-01</td>\n",
-       "      <td>0.079165</td>\n",
-       "      <td>0.071038</td>\n",
-       "      <td>0.086812</td>\n",
+       "      <th>11</th>\n",
+       "      <td>2020-12-01</td>\n",
+       "      <td>0.054481</td>\n",
+       "      <td>0.046675</td>\n",
+       "      <td>0.062635</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2020-06-01</td>\n",
-       "      <td>0.108362</td>\n",
-       "      <td>0.101161</td>\n",
-       "      <td>0.116452</td>\n",
+       "      <th>12</th>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>0.052613</td>\n",
+       "      <td>0.045206</td>\n",
+       "      <td>0.059917</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2020-07-01</td>\n",
-       "      <td>0.116837</td>\n",
-       "      <td>0.109440</td>\n",
-       "      <td>0.124985</td>\n",
+       "      <th>13</th>\n",
+       "      <td>2021-02-01</td>\n",
+       "      <td>0.053451</td>\n",
+       "      <td>0.045125</td>\n",
+       "      <td>0.060766</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2020-08-01</td>\n",
-       "      <td>0.106296</td>\n",
-       "      <td>0.098629</td>\n",
-       "      <td>0.113898</td>\n",
+       "      <th>14</th>\n",
+       "      <td>2021-03-01</td>\n",
+       "      <td>0.071770</td>\n",
+       "      <td>0.064501</td>\n",
+       "      <td>0.079489</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          ds      yhat  yhat_lower  yhat_upper\n",
-       "3 2020-04-01  0.079037    0.071216    0.087084\n",
-       "4 2020-05-01  0.079165    0.071038    0.086812\n",
-       "5 2020-06-01  0.108362    0.101161    0.116452\n",
-       "6 2020-07-01  0.116837    0.109440    0.124985\n",
-       "7 2020-08-01  0.106296    0.098629    0.113898"
+       "           ds      yhat  yhat_lower  yhat_upper\n",
+       "10 2020-11-01  0.065745    0.058062    0.073464\n",
+       "11 2020-12-01  0.054481    0.046675    0.062635\n",
+       "12 2021-01-01  0.052613    0.045206    0.059917\n",
+       "13 2021-02-01  0.053451    0.045125    0.060766\n",
+       "14 2021-03-01  0.071770    0.064501    0.079489"
       ]
      },
      "execution_count": 10,
@@ -400,7 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plot_plotly(m, forecast)  # This returns a plotly Figure\n",
+    "fig = plot_plotly(m, forecast,xlabel='Month', ylabel='Ozone (ppm)')  # This returns a plotly Figure\n",
     "py.iplot(fig)"
    ]
   },
@@ -412,6 +412,13 @@
    "source": [
     "fig.write_html(\"LA_county.html\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
